--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -16,22 +16,12 @@
     "import os\n",
     "\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "train_transform = transforms.Compose([\n",
-    "    transforms.Resize(232),\n",
-    "    transforms.RandomCrop(224),\n",
-    "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.RandomRotation(10),\n",
-    "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.1),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+    "transform = transforms.Compose([\n",
+    "        transforms.Resize((224, 224)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
     "])\n",
-    "\n",
-    "test_transform = transforms.Compose([\n",
-    "    transforms.Resize(232),\n",
-    "    transforms.CenterCrop(224),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
-    "])"
+    "    "
    ]
   },
   {
@@ -41,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_attack(weights_path=os.path.join(os.getcwd(), \"outputs/model_best.pth\")):\n",
+    "join = lambda path: os.path.join(os.getcwd(), path)\n",
+    "def evaluate_attack(weights_path=join(\"outputs/model_best.pth\"), test_dir=join(\"dataset/test\")):\n",
     "    model = models.resnet18(pretrained=False)\n",
     "\n",
     "    model.fc = torch.nn.Linear(model.fc.in_features, 2)\n",
@@ -51,9 +42,59 @@
     "    \n",
     "    model.load_state_dict(torch.load(weights_path))\n",
     "    model.to(DEVICE)\n",
+    "    \n",
     "    model.eval()\n",
     "\n",
-    "    "
+    "    if not os.path.exists(test_dir):\n",
+    "        print(f\"ERROR: Test directory not found: {test_dir}\")\n",
+    "        return\n",
+    "    \n",
+    "    dataset = datasets.ImageFolder(test_dir, transform=transform)\n",
+    "    dataloader = DataLoader(dataset, batch_size=32, shuffle=False)\n",
+    "\n",
+    "    print(f\"Attack images found: {len(dataset)}\")\n",
+    "\n",
+    "    confidences = []\n",
+    "    print(\"Performing atack with diffusion images...\")\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, _ in dataloader:\n",
+    "            inputs = inputs.to(DEVICE)\n",
+    "            logits = model(inputs)\n",
+    "            probs = F.softmax(logits, dim=1)\n",
+    "\n",
+    "            max_conf, _ = torch.max(probs, dim=1)\n",
+    "            confidences.extend(max_conf.cpu().numpy())\n",
+    "\n",
+    "    plot_histogram(confidences)\n",
+    "\n",
+    "def plot_histogram(confidences):\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.hist(confidences, bins=20, range=(0, 1), color='red', alpha=0.7, edgecolor='black')\n",
+    "    plt.title(\"Generalization Failure: Confiance in Unknown Samples (Diffusion)\", fontsize=14)\n",
+    "\n",
+    "    plt.xlabel(\"Network Confidence (Softmax Score)\", fontsize=12)\n",
+    "    plt.ylabel(\"Sample Count\", fontsize=12)\n",
+    "    plt.axvline(x=0.9, color='blue', linestyle='--', label='High Confidence Threshold')\n",
+    "    plt.legend()\n",
+    "    plt.grid(axis='y', alpha=0.5)\n",
+    "\n",
+    "    plt.text(0.1, 5, \"Ideally, the samples\\nshould be here\\n(Low Confidence)\", \n",
+    "             bbox=dict(facecolor='green', alpha=0.2))\n",
+    "    plt.text(0.75, 5, \"Reality:\\nOverconfidence\", \n",
+    "             bbox=dict(facecolor='red', alpha=0.2))\n",
+    "    output_path = './outputs/histogram_failure.png'\n",
+    "    plt.savefig(output_path)\n",
+    "    print(f\"Generated Graph: {output_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5726f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_attack()"
    ]
   }
  ],
